--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "request": "^2.88.2"
+    "node-fetch": "^3.2.6"
   }
 }
