--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "mongoose": "^6.3.8",
+    "node-schedule": "^2.1.0",
     "twitter-api-v2": "^1.12.2"
   }
 }
