--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "dependencies": {
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "mongoose": "^6.3.8",
-    "node-schedule": "^2.1.0",
     "twitter-api-v2": "^1.12.2"
   }
 }
